[package]
name = "erc20"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
substrate = { path = "../../substrate-proxy", default-features = true }

[dependencies.srml-support]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"
default-features = false

[features]
default = ["std"]
std = [
	"substrate/std",
 	"codec/std",
    "srml-support/std",
]
no_std = []
