[package]
name = "erc20"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { version = "2", package = "sr-std", default-features = false }
runtime-io = { version = "2", package = "sr-io", default-features = false }
version = { version = "2", package = "sr-version", default-features = false }
support = { version = "2", package = "srml-support", default-features = false }
primitives = { version = "2", package = "substrate-primitives", default-features = false }
substrate-session = { version = "2", default-features = false }
balances = { version = "2", package = "srml-balances", default-features = false }
babe = { version = "2", package = "srml-babe", default-features = false }
babe-primitives = { version = "2", package = "substrate-consensus-babe-primitives", default-features = false }
executive = { version = "2", package = "srml-executive", default-features = false }
indices = { version = "2", package = "srml-indices", default-features = false }
grandpa = { version = "2", package = "srml-grandpa", default-features = false }
system = { version = "2", package = "srml-system", default-features = false }
timestamp = { version = "2", package = "srml-timestamp", default-features = false }
sudo = { version = "2", package = "srml-sudo", default-features = false }
sr-primitives = { version = "2", default-features = false }
offchain-primitives = { version = "2", package = "substrate-offchain-primitives", default-features = false }

[dev-dependencies]
client = { version = "2", package = "substrate-client" }

[features]
default = ["std"]
std = [
  "codec/std",
  "rstd/std",
  "runtime-io/std",
  "support/std",
  "balances/std",
  "babe/std",
  "babe-primitives/std",
  "executive/std",
  "indices/std",
  "grandpa/std",
  "primitives/std",
  "sr-primitives/std",
  "system/std",
  "timestamp/std",
  "sudo/std",
  "version/std",
  "serde",
  "safe-mix/std",
  "offchain-primitives/std",
  "substrate-session/std",
]
no_std = []
